fixed small issues